--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   provider: ^6.0.3
   google_fonts: ^3.0.1
   hexcolor: ^3.0.1
+  fluttertoast: ^8.0.9
 
 dev_dependencies:
   flutter_test:
