ADD PHOTO PREVIEW SCREEN

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   fluttertoast: ^8.0.9
   camera: ^0.9.8+1
   get: ^4.6.5
+  path_provider: ^2.0.11
 
 dev_dependencies:
   flutter_test:
